--- a/Aufgaben/Aufgabe03/index.html
+++ b/Aufgaben/Aufgabe03/index.html
@@ -1,10 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>HelloWorld</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Webvisitenkarte von Maximilian Wagner, erstellt im Rahmen des Moduls Internet-Technologie.">
+
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Webvisitenkarte - Maximilian Wagner</title>
 </head>
+
 <body>
-Hello World!
+
+<main class="container">
+
+    <header class="card">
+        <h1>Maximilian Wagner</h1>
+        <img src="images/profilbild.jpg" alt="Ein professionelles Foto von Maximilian Wagner" class="profile-image">
+    </header>
+
+    <section class="card content-wrapper">
+
+        <div class="main-content">
+            <h2>Über mich</h2>
+            <p>
+                Gebürtiger Ostwestfale und seit 2 Jahren Bewohner des beschaulichen Städtchens Wolfenbüttel.<br>
+                Als Student der IT-Sicherheit an der Technischen Hochschule Brandenburg und praktizierender Softwareentwickler bewege ich mich an der spannenden Schnittstelle zwischen Code und Sicherheit.
+                Meine Leidenschaft gilt der Entwicklung robuster, sicherer Systeme und dem Verständnis, wie man diese vor externen Bedrohungen schützt.
+            </p>
+            <p>
+                Seit diesem Jahr bin ich Teil des Information-Security Teams bei PowerCo.
+                Meine Schwerpunkte sind der Erwerb eines fundierten, breiten Wissens in der Cybersecurity,
+                sowie der Aufbau einer Infrastruktur für automatisierte Penetrationstests.
+            </p>
+
+            <h2>Lieblingsfächer an der THB</h2>
+            <table>
+                <thead>
+                <tr>
+                    <th>Fach</th>
+                    <th>Schwerpunkt</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Unix-basierte Betriebssysteme</td>
+                    <td>Shell-Skripte & Systemnahe Programmierung</td>
+                </tr>
+                <tr>
+                    <td>English for Computer Scientists</td>
+                    <td>Scope and impact of the digital transformation process</td>
+                </tr>
+                <tr>
+                    <td>Netzwerksicherheit</td>
+                    <td>Angewandte IT-Sicherheit</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <aside class="sidebar">
+            <h2>Meine fachlichen Skills</h2>
+            <ul>
+                <li>Programmiersprachen
+                    <ul>
+                        <li>C, C++</li>
+                        <li>Python</li>
+                        <li>Java</li>
+                    </ul>
+                </li>
+                <li>Web-Technologien
+                    <ul>
+                        <li>HTML, CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </li>
+                <li>IT-Sicherheit
+                    <ul>
+                        <li>SIEM</li>
+                        <li>Netzwerkanalyse</li>
+                        <li>Penetrationstests</li>
+                    </ul>
+                </li>
+                <li>Cloud
+                    <ul>
+                        <li>Azure</li>
+                        <li>AWS</li>
+                    </ul>
+                </li>
+                <li>Betriebssysteme &amp; Systemnahe Programmierung</li>
+            </ul>
+        </aside>
+
+    </section>
+
+    <footer class="card footer-content">
+
+        <img src="images/Technische_Hochschule_Brandenburg_Logo.png" alt="Logo der Technischen Hochschule Brandenburg" class="footer-logo">
+
+        <p>
+            Technische Hochschule Brandenburg Maximilian Wagner <a href="mailto:maximilian.wagner@th-brandenburg.de">E-Mail senden</a>
+        </p>
+
+        <p>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                     src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+                     alt="CSS ist valide!" />
+            </a>
+        </p>
+
+    </footer>
+
+</main>
+
 </body>
 </html>
