Semester begleitender Test, Validierungs Formular ohne Styling

--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
                 <p>Einbindung aktueller Wetterdaten von einer externen API (OpenWeatherMap) mittels JavaScript und deren Darstellung auf der Seite.</p>
             </div>
         </a>
+
         <a href="Aufgaben/Aufgabe10/index.html" class="assignment-item">
             <div class="item-content">
-                <h3>Aufgabe 10</h3>
-                <p>Beschreibung folgt...</p>
+                <h3>Aufgabe 10: Debugging & Optimierung</h3>
+                <p>Analyse, Reparatur und Optimierung eines fehlerhaften Quellcodes mittels Validatoren, Ladezeit-Analyse und Debugging.</p>
             </div>
         </a>
 
-        <a href="#" class="assignment-item">
+        <a href="Aufgaben/Semester-Test/index.html" class="assignment-item">
             <div class="item-content">
                 <h3>Semesterbegleitender Test</h3>
                 <p>Erstellung einer thematischen Anmeldeseite mit dem Fokus auf clientseitiger Formular-Validierung mittels HTML5 und JavaScript.</p>
