Semester Test done

--- a/Aufgaben/Semester-Test/success.html
+++ b/Aufgaben/Semester-Test/success.html
@@ -3,14 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Success!</title>
+    <title>Erfolg!</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Metal+Mania&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<main class="form-container">
-    <h1>Thank you for registering!</h1>
-    <p>We will contact you shortly.</p>
-    <a href="index.html">Back to registration</a>
+
+<div class="video-background-container">
+    <video autoplay muted loop playsinline>
+        <source src="assets/videos/fire_compressed.webm" type="video/webm">
+    </video>
+</div>
+
+<main class="theme-container">
+    <h2>Registrierung erfolgreich!</h2>
+    <p>Danke für deine Anmeldung. Wir werden uns in Kürze bei dir melden.</p>
+    <a href="index.html" class="submit-btn" style="text-align: center; text-decoration: none; display: block; padding: 0.75rem;">Zurück</a>
+
+    <footer id="form-footer">
+    </footer>
 </main>
+
+<script src="js/main.js"></script>
 </body>
 </html>
