--- a/Aufgaben/Semester-Test/index.html
+++ b/Aufgaben/Semester-Test/index.html
@@ -3,56 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semester Test: Registration</title>
+    <title>Semester Test: Gilden-Registrierung</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Metal+Mania&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<main class="form-container">
-    <h2>Registration</h2>
+<div class="video-background-container">
+    <video autoplay muted loop playsinline>
+        <source src="assets/videos/fire_compressed.webm" type="video/webm">
+    </video>
+</div>
+
+<main class="theme-container">
+    <h2>Gilden-Registrierung</h2>
 
     <form id="registration-form" novalidate>
 
         <div class="input-group">
-            <label for="name">Name</label>
+            <label for="name">Charaktername</label>
             <input type="text" id="name">
             <div class="error-message"></div>
         </div>
 
         <div class="input-group">
-            <label for="email">Email</label>
+            <label for="email">E-Mail des Schreibers</label>
             <input type="email" id="email">
             <div class="error-message"></div>
         </div>
 
         <div class="input-group">
-            <label for="password">Password</label>
+            <label for="password">Geheimes Passwort</label>
             <input type="password" id="password">
             <div class="error-message"></div>
         </div>
 
         <div class="input-group">
-            <label for="password-confirm">Confirm Password</label>
+            <label for="password-confirm">Passwort wiederholen</label>
             <input type="password" id="password-confirm">
             <div class="error-message"></div>
         </div>
 
         <div class="input-group">
-            <label for="birthday">Birthday</label>
+            <label for="birthday">Geburtstag</label>
             <input type="date" id="birthday">
             <div class="error-message"></div>
         </div>
 
         <div class="input-group">
-            <label for="bio">Short Bio (Max 200 Characters)</label>
+            <label for="bio">Charakter-Bio (Max 200 Zeichen)</label>
             <textarea id="bio" rows="4"></textarea>
             <div class="char-counter">
-                <span id="char-count">200</span> characters remaining
+                <span id="char-count">200</span> Zeichen verbleibend
             </div>
             <div class="error-message"></div>
         </div>
 
-        <button type="submit" class="submit-btn">Register</button>
+        <button type="submit" class="submit-btn">Der Gilde beitreten</button>
 
     </form>
 
