--- a/Aufgaben/Semester-Test/index.html
+++ b/Aufgaben/Semester-Test/index.html
@@ -20,6 +20,10 @@
 </div>
 
 <main class="theme-container">
+    <div class="logo-container">
+        <img src="assets/images/fantasy_reel_icon.png" alt="Fantasy Rollen-Icon" class="guild-logo">
+    </div>
+
     <h2>Gilden-Registrierung</h2>
 
     <form id="registration-form" novalidate>
