pen und paper adjustment

--- a/Aufgaben/Semester-Test/index.html
+++ b/Aufgaben/Semester-Test/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semester Test: Gilden-Registrierung</title>
+    <title>Semester Test: Pen &amp; Paper One Shot Anmeldung</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,11 +20,12 @@
 </div>
 
 <main class="theme-container">
+
     <div class="logo-container">
-        <img src="assets/images/fantasy_reel_icon.png" alt="Fantasy Rollen-Icon" class="guild-logo">
+        <img src="assets/images/fantasy_reel_icon.png" alt="Gruppen-Logo" class="guild-logo">
     </div>
 
-    <h2>Gilden-Registrierung</h2>
+    <h2>Pen &amp; Paper OneShot</h2>
 
     <form id="registration-form" novalidate>
 
@@ -35,7 +36,7 @@
         </div>
 
         <div class="input-group">
-            <label for="email">E-Mail des Schreibers</label>
+            <label for="email">Deine E-Mail</label>
             <input type="email" id="email">
             <div class="error-message"></div>
         </div>
@@ -67,7 +68,7 @@
             <div class="error-message"></div>
         </div>
 
-        <button type="submit" class="submit-btn">Der Gilde beitreten</button>
+        <button type="submit" class="submit-btn">Gruppe beitreten</button>
 
     </form>
 
