--- a/Aufgaben/Semester-Test/success.html
+++ b/Aufgaben/Semester-Test/success.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erfolg!</title>
+    <title>Anmeldung erfolgreich!</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,9 +20,9 @@
 </div>
 
 <main class="theme-container">
-    <h2>Registrierung erfolgreich!</h2>
-    <p>Danke für deine Anmeldung. Wir werden uns in Kürze bei dir melden.</p>
-    <a href="index.html" class="submit-btn" style="text-align: center; text-decoration: none; display: block; padding: 0.75rem;">Zurück</a>
+    <h2>Anmeldung erfolgreich!</h2>
+    <p>Deine Anmeldung wurde an den Spielleiter weitergeleitet. Wir melden uns in Kürze bei dir.</p>
+    <a href="index.html" class="submit-btn" style="text-align: center; text-decoration: none; display: block; padding: 0.75rem;">Zurück zur Anmeldung</a>
 
     <footer id="form-footer">
     </footer>
