--- a/Aufgaben/Semester-Test/index.html
+++ b/Aufgaben/Semester-Test/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semester Test: Pen &amp; Paper One Shot Anmeldung</title>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Metal+Mania&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
 </head>
