--- a/Aufgaben/Aufgabe07/index.html
+++ b/Aufgaben/Aufgabe07/index.html
@@ -13,7 +13,7 @@
     <p>Lade Konzept...</p>
 </main>
 
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="js/marked.min.js"></script>
 
 <script src="js/render-md.js"></script>
 
