--- a/Aufgaben/Semester-Test/index.html
+++ b/Aufgaben/Semester-Test/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semester Test: Pen &amp; Paper One Shot Anmeldung</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Metal+Mania&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -69,6 +73,11 @@
     </form>
 
     <footer id="form-footer">
+        <div class="attributions">
+            <a href="readme.html" style="color: #F8B700; text-decoration: none;">[ Dokumentation / Readme ]</a>
+        </div>
+
+        <p id="copyright-notice"></p>
     </footer>
 
 </main>
