--- a/Aufgaben/Semester-Test/readme.html
+++ b/Aufgaben/Semester-Test/readme.html
@@ -17,7 +17,7 @@
     <p>Lade Dokumentation...</p>
 </main>
 
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="js/marked.min.js"></script>
 
 <script src="js/render-md.js"></script>
 
