--- a/Aufgaben/Semester-Test/readme.html
+++ b/Aufgaben/Semester-Test/readme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dokumentation: P&P OneShot Anmeldung</title>
+    <title>Dokumentation: P &amp; P OneShot Anmeldung</title>
 
     <link rel="stylesheet" href="css/md-style.css">
 </head>
