--- a/Aufgaben/Aufgabe10/readme.html
+++ b/Aufgaben/Aufgabe10/readme.html
@@ -10,7 +10,7 @@
 <body>
 
 <main id="markdown-content">
-    <p>Lade Konzept...</p>
+    <p>Lade Readme...</p>
 </main>
 
 <script src="assets/js/marked.min.js"></script>
