this time with content

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -3,80 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kontaktseite und Impressum des Portfolios von Maximilian Wagner.">
-
+    <meta name="description" content="Kontaktieren Sie Maximilian Wagner.">
+    <meta name="author" content="Maximilian Wagner">
+    <meta name="theme-color" content="#00ddb3">
     <title>Kontakt - Maximilian Wagner</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-    <!-- Haupt-Stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- Favicons für verschiedene Geräte -->
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" href="images/favicon/favicon.ico" sizes="any">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="manifest.json">
-    <meta name="msapplication-TileColor" content="#00ddb3">
-    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#00ddb3">
-    <!-- Ende Favicons -->
+    <link rel="apple-touch-icon" href="images/favicon/apple-icon-180x180.png">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 <header id="header-placeholder" class="main-header"></header>
-
 <main>
     <section id="contact" class="contact-section">
         <div class="section-header">
             <h2>Kontakt</h2>
-            <p>Ich freue mich über deine Nachricht.</p>
+            <p>Haben Sie eine Frage oder eine Projektanfrage?</p>
         </div>
-
-        <form id="contact-form" action="https://formspree.io/f/DEINE_EINZIGARTIGE_ID" method="POST">
-            <div class="form-group">
-                <label for="name">Dein Name:</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Deine E-Mail:</label>
-                <input type="email" id="email" name="_replyto" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Deine Nachricht:</label>
-                <textarea id="message" name="message" rows="6" required></textarea>
-            </div>
-            <button type="submit" class="button">Nachricht senden</button>
-        </form>
-    </section>
-
-    <section id="impressum" class="impressum-section">
-        <div class="section-header">
-            <h2>Impressum</h2>
-        </div>
-        <p>
-            [Dein Name]<br>
-            [Deine Straße und Hausnummer]<br>
-            [Deine PLZ und Stadt]<br><br>
-            <strong>Kontakt:</strong><br>
-            E-Mail: [Deine E-Mail-Adresse]
-        </p>
+        <div id="contact-form-placeholder"></div>
     </section>
 </main>
-
 <footer id="footer-placeholder" class="main-footer-content"></footer>
-
 <script src="js/main.js"></script>
 </body>
 </html>
