--- a/portfolio/success.html
+++ b/portfolio/success.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Projektübersicht von Maximilian Wagner.">
-    <meta name="author" content="Maximilian Wagner">
-    <meta name="theme-color" content="#00ddb3">
-    <title>Projekte - Maximilian Wagner</title>
+    <title>Erfolg - Maximilian Wagner</title>
 
     <link rel="icon" href="images/favicon/favicon.ico" sizes="any">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
@@ -17,12 +14,17 @@
 <body>
 <header id="header-placeholder" class="main-header"></header>
 <main>
-    <section id="projects" class="projects-section">
+    <section class="success-section">
         <div class="section-header">
-            <h2>Projekte</h2>
-            <p>Ein Einblick in meine technologischen Schwerpunkte.</p>
+            <h2>Vielen Dank!</h2>
+            <p>Ihre Nachricht wurde simuliert übertragen.</p>
         </div>
-        <div id="projects-gallery-placeholder"></div>
+        <div class="fade-in visible" style="max-width: 600px; margin: 0 auto; text-align: center;">
+            <p style="margin-bottom: 2rem;">Das folgende JSON-Objekt wurde im localStorage gespeichert:</p>
+            <div id="success-data-display"></div>
+            <br>
+            <a href="index.html" class="button">Zurück zur Startseite</a>
+        </div>
     </section>
 </main>
 <footer id="footer-placeholder" class="main-footer-content"></footer>
