--- a/portfolio/certificates.html
+++ b/portfolio/certificates.html
@@ -3,51 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Übersicht der IT-Zertifikate von Maximilian Wagner.">
+    <meta name="description" content="IT-Security Zertifikate von Maximilian Wagner.">
+    <meta name="author" content="Maximilian Wagner">
+    <meta name="theme-color" content="#00ddb3">
     <title>Zertifikate - Maximilian Wagner</title>
 
-    <!-- Google Fonts einbinden -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-
-    <!-- Haupt-Stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
-
-    <!-- Favicons für verschiedene Geräte -->
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="images/favicon/android-icon-192x192.png">
+    <link rel="icon" href="images/favicon/favicon.ico" sizes="any">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="manifest.json">
-    <meta name="msapplication-TileColor" content="#00ddb3">
-    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
-    <meta name="theme-color" content="#00ddb3">
-    <!-- Ende Favicons -->
+    <link rel="apple-touch-icon" href="images/favicon/apple-icon-180x180.png">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 <header id="header-placeholder" class="main-header"></header>
-
 <main>
-    <section id="certificates-page">
-    <!-- Wird per JavaScript mit Zertifikats-Galerie befüllt -->
+    <section id="certificates" class="certificates-section">
         <div id="certificates-gallery-placeholder"></div>
     </section>
 </main>
-
 <footer id="footer-placeholder" class="main-footer-content"></footer>
-
 <script src="js/main.js"></script>
-
 </body>
 </html>
