Ãfinal with terminal

--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -20,9 +20,12 @@
     <section id="contact" class="contact-section">
         <div class="section-header">
             <h2>Kontakt</h2>
-            <p>Haben Sie eine Frage oder eine Projektanfrage?</p>
+            <p>Sie wollen sich vernetzen oder eine Projektanfrage stellen?</p>
         </div>
         <div id="contact-form-placeholder"></div>
+
+        <div id="legal-placeholder" class="fade-in"></div>
+
     </section>
 </main>
 <footer id="footer-placeholder" class="main-footer-content"></footer>
