--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,6 +22,7 @@
             <h1>Softwareentwickler &amp;<br>IT-Security-Spezialist</h1>
             <p class="subtitle">Willkommen in meinem digitalen Portfolio.</p>
         </div>
+        <div id="terminal-placeholder"></div>
     </section>
     <section id="about" class="about-section">
         <div class="section-header">
