--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -19,8 +19,8 @@
 <main>
     <section id="projects" class="projects-section">
         <div class="section-header">
-            <h2>Projekte</h2>
-            <p>Ein Einblick in meine technologischen Schwerpunkte.</p>
+            <h2>Software-Projekte</h2>
+            <p>Ein Einblick in meine Development Schwerpunkte.</p>
         </div>
         <div id="projects-gallery-placeholder"></div>
     </section>
