--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Portfolio von Maximilian Wagner - Fokus auf Softwareentwicklung und IT-Security.">
     <meta name="author" content="Maximilian Wagner">
     <meta name="theme-color" content="#00ddb3">
+    <meta name="robots" content="noindex, nofollow">
     <title>Maximilian Wagner - Portfolio</title>
 
     <link rel="icon" href="images/favicon/favicon.ico" sizes="any">
