--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Projektübersicht von Maximilian Wagner.">
     <meta name="author" content="Maximilian Wagner">
     <meta name="theme-color" content="#00ddb3">
+    <meta name="robots" content="noindex, nofollow">
     <title>Projekte - Maximilian Wagner</title>
 
     <link rel="icon" href="images/favicon/favicon.ico" sizes="any">
