--- a/portfolio/success.html
+++ b/portfolio/success.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Erfolg - Maximilian Wagner</title>
 
     <link rel="icon" href="images/favicon/favicon.ico" sizes="any">
