--- a/portfolio/readme.html
+++ b/portfolio/readme.html
@@ -6,16 +6,19 @@
     <meta name="robots" content="noindex, nofollow">
     <title>Dokumentation - Maximilian Wagner</title>
     <link rel="stylesheet" href="css/style.css">
+    <script>
+        window.APP_CONFIG = { basePath: '' };
+    </script>
     <script src="js/marked.min.js"></script>
 </head>
 <body>
 <header id="header-placeholder" class="main-header"></header>
 <main>
-    <section class="readme-section">
+    <div class="readme-section">
         <div id="markdown-content" class="fade-in">
             <p>Dokumentation wird geladen...</p>
         </div>
-    </section>
+    </div>
 </main>
 <footer id="footer-placeholder" class="main-footer-content"></footer>
 <script src="js/main.js"></script>
