layout prob fix

--- a/portfolio/impressum.html
+++ b/portfolio/impressum.html
@@ -13,7 +13,7 @@
 <body>
 <div id="header-placeholder"></div>
 
-<main class="section">
+<section class="section">
     <div class="container">
         <div class="section-header">
             <h1>Impressum</h1>
@@ -24,7 +24,7 @@
             <h2>Angaben gemäß § 5 DDG</h2>
             <p>
                 Maximilian Wagner<br>
-                Musterstasse 4<br>
+                Musterstrasse 4<br>
                 12345 Musterstadt
             </p>
             <br>
@@ -35,12 +35,12 @@
             </p>
         </section>
 
-
         <section class="legal-section">
             <h2>Redaktionell verantwortlich</h2>
             <p>
                 Maximilian Wagner<br>
-                [Anschrift wie oben]
+                Musterstrasse 4<br>
+                12345 Musterstadt
             </p>
         </section>
 
@@ -58,7 +58,7 @@
             <p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.</p>
         </section>
     </div>
-</main>
+</section>
 
 <footer class="main-footer-content" id="footer-placeholder"></footer>
 
