--- a/portfolio/projects/cub3d.html
+++ b/portfolio/projects/cub3d.html
@@ -20,7 +20,7 @@
 <body>
 <div id="header-placeholder"></div>
 
-<main class="section project-detail">
+<section class="section project-detail">
     <div class="container">
         <nav class="project-nav">
             <a href="../projects.html" class="back-link">← Zurück zur Übersicht</a>
@@ -77,7 +77,7 @@
             </div>
         </div>
     </div>
-</main>
+</section>
 
 <footer class="main-footer-content" id="footer-placeholder"></footer>
 
